Build: add jpackage app-image & MSI tasks; resources & README